--- a/index.html
+++ b/index.html
@@ -1,26 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/global.css" />
+    <link rel="stylesheet" href="./assets/css/florest.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Major+Mono+Display&family=Protest+Guerrilla&display=swap"
       rel="stylesheet"
     />
-    <title>Floresta Amazônica</title>
+    <title>Amazônia - A Floresta</title>
   </head>
   <body>
-    <header>
-      <nav></nav>
-    </header>
-    <section class="start">
-      <img class="start-banner" src="./assets/img/banner-start.jpg" alt="" />
+    <header class="menu">
+      <nav class="menu-nav">
+        <h1 class="menu-nav__logo">
+          <a href="/"><img src="./assets/img/logo.png" alt="logo do site" /></a>
+        </h1>
 
-      <h1 class="start-title">Floresta Amazônica</h1>
+        <ul class="menu-nav__links">
+          <li><a href="/">A Floresta</a></li>
+          <li><a href="/cop30.html">COP-30</a></li>
+          <li><a href="/problems.html">Os Problemas Enfrentados</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section class="start">
+      <img class="start--banner" src="./assets/img/start-banner.jpg" alt="" />
+
+      <h2 class="start--title">Floresta Amazônica</h2>
     </section>
+
+    <section class="biome">
+      <h2 class="section-title">O BIOMA AMAZÔNICO</h2>
+      <div class="biome-content">
+        <p class="biome-content__text">
+          A Amazônia, o maior bioma tropical do mundo, é uma das maravilhas
+          naturais mais impressionantes do planeta. Abrangendo uma área de
+          aproximadamente 7 milhões de quilômetros quadrados, a Amazônia é uma
+          fonte vital de biodiversidade, recursos naturais e serviços
+          ecossistêmicos essenciais para o equilíbrio climático global.
+        </p>
+
+        <img
+          src="./assets/img/biome-img.jpg"
+          alt=""
+          class="biome-content__img"
+        />
+      </div>
+    </section>
+
+    <section class="region">
+      <h2 class="section-title">A REGIÃO</h2>
+
+      <p>
+        Localizada principalmente na região norte do Brasil, a Amazônia se
+        estende por nove países da América do Sul, incluindo Brasil, Peru,
+        Colômbia, Venezuela, Equador, Bolívia, Guiana, Suriname e Guiana
+        Francesa. No Brasil, a Amazônia abrange estados como Amazonas, Pará,
+        Acre, Rondônia, Roraima, Amapá, além de partes de Mato Grosso, Tocantins
+        e Maranhão.
+      </p>
+
+      <p>
+        Amazônia Legal é composta por nove estados e está dividida em duas
+        regiões distintas: Amazônia Ocidental e Amazônia Oriental. Essa vasta
+        área abriga 55,9% dos povos originários do Brasil. Atualmente, os
+        estados que fazem parte da Amazônia Legal são:
+        <a href="" class="link">(Saiba mais)</a>
+      </p>
+
+      <div class="region-content">
+        <ul class="region-content__states">
+          <li>Acre</li>
+          <li>Amapá</li>
+          <li>Amazonas</li>
+          <li>Mato Grosso</li>
+          <li>Pará</li>
+          <li>Rondônia</li>
+          <li>Roraima</li>
+          <li>Tocantins</li>
+          <li>Maranhão (em parte)</li>
+        </ul>
+        <img
+          class="region-content__img"
+          src="./assets/img/region-img.jpg"
+          alt=""
+        />
+      </div>
+    </section>
+
+    <section class="rivers">
+      <h2 class="section-title">OS RIOS</h2>
+
+      <div class="rivers-content">
+        <p>
+          A Amazônia abriga uma vasta rede fluvial, incluindo o poderoso Rio
+          Amazonas, o maior em volume de água e o segundo mais longo do mundo
+          após o Rio Nilo. Além do Amazonas, afluentes como o Rio Negro, o Rio
+          Madeira, o Rio Tapajós e o Rio Xingu desempenham papéis cruciais na
+          biodiversidade e na vida das comunidades ribeirinhas. Com uma extensão
+          de 6.750 km e uma descarga de 200.000 a 240.000 m³/s, o Rio Amazonas é
+          o principal curso d'água da região.
+        </p>
+
+        <p>
+          O rio Amazonas possui cerca de 1100 rios afluentes, situados tanto na
+          sua margem esquerda quanto na sua margem direita, compreendendo toda a
+          área de drenagem da bacia Amazônica. Entre os principais afluentes do
+          Amazonas, estão:
+        </p>
+
+        <table>
+          <tr>
+            <td>Rio Madeira</td>
+            <td>Rio Paru</td>
+            <td>Rio Jutaí</td>
+          </tr>
+          <tr>
+            <td>Rio Javari</td>
+            <td>Rio Juruá</td>
+            <td>Rio Purus</td>
+          </tr>
+          <tr>
+            <td>Rio Tefé</td>
+            <td>Rio Napo</td>
+            <td>Rio Coari</td>
+          </tr>
+          <tr>
+            <td>Rio Içá (ou Putumayo)</td>
+            <td>Rio Negro</td>
+            <td>Rio Jari</td>
+          </tr>
+        </table>
+
+        <a href="https://brasilescola.uol.com.br/brasil/rio-amazonas.htm"
+          >Veja mais sobre "Rio Amazonas"</a
+        >
+      </div>
+    </section>
+
+    <footer class="footer">
+      <nav class="footer-nav">
+        <address>
+          &copy; 2024
+          <a href="https://github.com/Eduuardonogueira"
+            >Eduardo Nogueira de Castro</a
+          >. Todos os direitos reservados.
+        </address>
+
+        <ul class="footer-nav__links">
+          <li><a href="/">A Floresta</a></li>
+          <li><a href="/cop30.html">COP-30</a></li>
+          <li><a href="/problems.html">Os Problemas Enfrentados</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
