--- a/problems.html
+++ b/problems.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/problems.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/img/logo.png"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -63,28 +68,81 @@
           <img src="./assets/img/area-deforestation.jpg" alt="" />
           <img src="./assets/img/woods-sliceds.jpg" alt="" />
           <img src="./assets/img/tree-burned.jpg" alt="" />
+          <img src="./assets/img/burning-area.jpg" alt="" />
+          <img src="./assets/img/burning.jpg" alt="" />
+          <img src="./assets/img/illegal-transport.jpg" alt="" />
         </div>
 
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/ev1e7zFcxI0?si=VT_nTqkgxuahbuFQ"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+        <div class="deforestation--medias">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/ev1e7zFcxI0?si=VT_nTqkgxuahbuFQ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+          <div class="rs_skip">
+            <div
+              class="js-widget-spotify widget-spotify rs_skip"
+              data-href="https://open.spotify.com/embed-podcast/episode/0LTctAyzg4Vl89InDKeiz8"
+            >
+              <iframe
+                width="100%"
+                height="240"
+                src="https://open.spotify.com/embed/episode/0LTctAyzg4Vl89InDKeiz8"
+                frameborder="0"
+                allowtransparency="true"
+                allow="encrypted-media"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="burning">
+        <h2 class="section-title">Queimadas</h2>
+        <p>
+          As queimadas na Amazônia representam uma crise ambiental de proporções
+          globais, ecoando alarmes sobre a saúde do nosso planeta. A Amazônia,
+          conhecida como o pulmão do mundo, é o maior bioma tropical do planeta
+          e um dos principais reguladores do clima global. No entanto, esse
+          ecossistema vital tem sido constantemente assolado por incêndios
+          devastadores. As causas das queimadas na Amazônia são diversas e
+          complexas, indo desde o desmatamento ilegal até as práticas agrícolas
+          e de criação de gado. O fogo muitas vezes é deliberadamente iniciado
+          para limpar terras, resultando em um ciclo vicioso de destruição que
+          compromete a biodiversidade, os recursos hídricos e o modo de vida de
+          comunidades indígenas e ribeirinhas.
+        </p>
+
+        <p>
+          Além das consequências locais, as queimadas na Amazônia têm
+          repercussões globais. A liberação de enormes quantidades de gases de
+          efeito estufa intensifica o aquecimento global, exacerbando os padrões
+          climáticos extremos e contribuindo para a perda irreparável de
+          ecossistemas preciosos.
+        </p>
+
+        <p>
+          Combater as queimadas na Amazônia exige uma abordagem abrangente e
+          coordenada. Isso inclui fortalecer a aplicação das leis ambientais,
+          investir em monitoramento e fiscalização eficazes, promover
+          alternativas sustentáveis para o uso da terra e reconhecer e respeitar
+          os direitos das comunidades locais e indígenas sobre suas terras
+          ancestrais.
+        </p>
+
+        <img src="./assets/img/burning-trees.jpg" alt="" />
       </section>
     </main>
 
     <footer class="footer">
       <nav class="footer-nav">
         <address>
-          &copy; 2024
-          <a href="https://github.com/Eduuardonogueira"
-            >Eduardo Nogueira de Castro</a
-          >. Todos os direitos reservados.
+          &copy; 2024 Amazon Forest. Todos os direitos reservados.
         </address>
 
         <ul class="footer-nav__links">
