--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="shortcut icon"
+      href="./assets/img/logo.png"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Major+Mono+Display&family=Protest+Guerrilla&display=swap"
       rel="stylesheet"
     />
@@ -147,10 +152,7 @@
     <footer class="footer">
       <nav class="footer-nav">
         <address>
-          &copy; 2024
-          <a href="https://github.com/Eduuardonogueira"
-            >Eduardo Nogueira de Castro</a
-          >. Todos os direitos reservados.
+          &copy; 2024 Amazon Forest. Todos os direitos reservados.
         </address>
 
         <ul class="footer-nav__links">
