--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       type="image/x-icon"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Major+Mono+Display&family=Protest+Guerrilla&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Bubblegum+Sans&family=Protest+Guerrilla&display=swap"
       rel="stylesheet"
     />
     <title>Amazônia - A Floresta</title>
